small changes to test notebook

--- a/check_kernels.ipynb
+++ b/check_kernels.ipynb
@@ -338,6 +338,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 987,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pycuda.gpuarray as ga"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 989,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = ga.arange(20, dtype=np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 992,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "s = ga.sum(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 995,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,   1.,   2.,   3.,   4.,   5.,   6.,   7.,   8.,   9.,  10.,\n",
+       "        11.,  12.,  13.,  14.,  15.,  16.,  17.,  18.,  19.])"
+      ]
+     },
+     "execution_count": 995,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
