clean up Introduction file

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -543,12 +543,12 @@
    "metadata": {},
    "source": [
     "Here's a random clifford sequence with 0.01 t1 decay probability between each gate. We run 30 random rounds and \n",
-    "print the :"
+    "print the probability for the bit to be in the up or down state, and the gate that was applied:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -557,36 +557,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.  0.] rotate_z\n",
-      "[ 0.505  0.495] rotate_x\n",
+      "[ 0.01  0.99] rotate_x\n",
+      "[ 0.9901  0.0099] rotate_y\n",
       "[ 0.505  0.495] rotate_y\n",
-      "[ 0.99505  0.00495] rotate_x\n",
-      "[ 0.5099005  0.4900995] rotate_y\n",
-      "[ 0.5148015  0.4851985] rotate_z\n",
-      "[ 0.50987594  0.49012406] rotate_y\n",
-      "[ 0.51477718  0.48522282] rotate_z\n",
-      "[ 0.49049305  0.50950695] rotate_y\n",
-      "[ 0.51441188  0.48558812] rotate_y\n",
-      "[ 0.02945695  0.97054305] rotate_x\n",
-      "[ 0.03916238  0.96083762] rotate_z\n",
-      "[ 0.04877075  0.95122925] rotate_z\n",
-      "[ 0.49094572  0.50905428] rotate_x\n",
-      "[ 0.5191949  0.4808051] rotate_y\n",
-      "[ 0.48599705  0.51400295] rotate_y\n",
-      "[ 0.5138741  0.4861259] rotate_y\n",
-      "[ 0.49126464  0.50873536] rotate_y\n",
-      "[ 0.06936735  0.93063265] rotate_x\n",
-      "[ 0.93132632  0.06867368] rotate_x\n",
-      "[ 0.93201306  0.06798694] rotate_z\n",
-      "[ 0.49648139  0.50351861] rotate_y\n",
-      "[ 0.50151658  0.49848342] rotate_z\n",
-      "[ 0.081584  0.918416] rotate_x\n",
-      "[ 0.09076816  0.90923184] rotate_z\n",
-      "[ 0.09986048  0.90013952] rotate_z\n",
-      "[ 0.10886187  0.89113813] rotate_z\n",
-      "[ 0.11777325  0.88222675] rotate_z\n",
-      "[ 0.49194834  0.50805166] rotate_x\n",
-      "[ 0.8815077  0.1184923] rotate_x\n"
+      "[ 0.505  0.495] rotate_x\n",
+      "[ 0.50992519  0.49007481] rotate_x\n",
+      "[ 0.49517406  0.50482594] rotate_x\n",
+      "[ 0.50022232  0.49977768] rotate_z\n",
+      "[ 0.5047799  0.4952201] rotate_x\n",
+      "[ 0.5097321  0.4902679] rotate_z\n",
+      "[ 0.49536522  0.50463478] rotate_x\n",
+      "[ 0.50041157  0.49958843] rotate_z\n",
+      "[ 0.5002211  0.4997789] rotate_x\n",
+      "[ 0.50478112  0.49521888] rotate_x\n",
+      "[ 0.5002667  0.4997333] rotate_y\n",
+      "[ 0.04819477  0.95180523] rotate_y\n",
+      "[ 0.5047373  0.4952627] rotate_y\n",
+      "[ 0.95004512  0.04995488] rotate_y\n",
+      "[ 0.95054467  0.04945533] rotate_z\n",
+      "[ 0.50964302  0.49035698] rotate_x\n",
+      "[ 0.5053914  0.4946086] rotate_y\n",
+      "[ 0.49550126  0.50449874] rotate_y\n",
+      "[ 0.49968927  0.50031073] rotate_y\n",
+      "[ 0.50056857  0.49943143] rotate_y\n",
+      "[ 0.50443711  0.49556289] rotate_x\n",
+      "[ 0.93779141  0.06220859] rotate_x\n",
+      "[ 0.50937072  0.49062928] rotate_x\n",
+      "[ 0.07375902  0.92624098] rotate_x\n",
+      "[ 0.92697857  0.07302143] rotate_y\n",
+      "[ 0.08229121  0.91770879] rotate_x\n",
+      "[ 0.51413821  0.48586179] rotate_x\n"
      ]
     }
    ],
@@ -616,26 +616,6 @@
     "    wait()\n",
     "    print(dm.get_diag(), gate.func.__name__)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "s = random_cliffords[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
