--- a/doc/source/introduction.ipynb
+++ b/doc/source/introduction.ipynb
@@ -44,7 +44,7 @@
     "  \n",
     "  - The calculations are performed on a GPU\n",
     "  - Python 3\n",
-    "  - Open source (GPL), get on http://www.github.com/brianzi/quantumsim"
+    "  - Open source (GPL), get on http://www.github.com/quantumsim/quantumsim"
    ]
   },
   {
