--- a/doc/source/introduction.ipynb
+++ b/doc/source/introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Quantumsim"
+    "# Introduction to `quantumsim`"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "  \n",
     "  - The calculations are performed on a GPU\n",
     "  - Python 3\n",
-    "  - Open source (GPL), get on http://www.github.com/brianzi/quantumsim"
+    "  - Open source (GPL), get on http://www.github.com/quantumsim/quantumsim"
    ]
   },
   {
@@ -545,12 +545,12 @@
    "source": [
     "Let's have a closer look at:\n",
     "\n",
-    "#### Classical qubits\n",
+    "### Classical qubits\n",
     "\n",
     " - Qubits that are in a definite state (0 or 1) and not entangled with the rest of the system are called 'classical'\n",
     " - Classical qubits are not represented in the density matrix\n",
     " \n",
-    "#### PTM compilation\n",
+    "### PTM compilation\n",
     "\n",
     " - PTM's are not applied immediately\n",
     " - This way, when several consecutive PTM's are applied to the same qubit, they can be combined to one before applying\n",
@@ -1590,7 +1590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1604,7 +1604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
