update URL to Gitlab

--- a/doc/Tutorial.ipynb
+++ b/doc/Tutorial.ipynb
@@ -44,7 +44,7 @@
     "  \n",
     "  - The calculations are performed on a GPU\n",
     "  - Python 3\n",
-    "  - Open source (GPL), get on http://www.github.com/quantumsim/quantumsim"
+    "  - Open source (GPL), get on https://gitlab.com/quantumsim/quantumsim"
    ]
   },
   {
@@ -1590,7 +1590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
