Update diagonal functional in tutorial notebook

--- a/doc/source/tutorial/controller.ipynb
+++ b/doc/source/tutorial/controller.ipynb
@@ -109,7 +109,7 @@
     "            for cycle in range(num_cycles):\n",
     "                self.to_dataset(self.apply('zz_stabilizer', cycle=cycle, **params), concat_dim='cycle')               \n",
     "                self.state.renormalize()\n",
-    "                self.to_dataset(self.state.diagonal.assign_coords(cycle=cycle), concat_dim='cycle')\n",
+    "                self.to_dataset(self.state.diagonal().assign_coords(cycle=cycle), concat_dim='cycle')\n",
     "        return experiment"
    ]
   },
